tests/bad_programs/type_errors/double_geq_str.nc
int main() {
    if (65.4 >= "hjfd") {
        return 0;
    } else {
        return 1;
    }
}
